--- a/themes/customized/layouts/_default/taxonomy.html
+++ b/themes/customized/layouts/_default/taxonomy.html
@@ -1,9 +1,8 @@
-{{ define "title" }}{{ .Title }} · {{ .Site.Title }}{{ end }}
 {{ define "header" }}
 <div id="page-title">
   <div class="row">
-    <div class="col-xs-12 col-sm-12">
-        <h1>{{ i18n .Data.Singular }}: {{ .Title }}</h1>
+     <div class="col-xs-12 col-sm-12">
+        <h1>{{ i18n "blog" }}</h1>
      </div>
   </div>
 </div>
