--- a/themes/customized/layouts/blog/single.html
+++ b/themes/customized/layouts/blog/single.html
@@ -1,24 +1,5 @@
 {{ define "main" }}
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showDesktop">
-    {{ partial "blog-sidebar.html" . }}
-    
-    {{ $related := .Site.RegularPages.Related . | first 3 }}
-    {{ with $related }}
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
-      {{ range . }}
-      <div class="related-post clearfix">
-        <a href="{{ .Permalink }}">
-          <h3 class="post-header-title">{{ .Title }}</h3>
-          <img class="related-post-image" src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
-        </a>
-      </div>
-      {{ end }}
-    </div>
-    {{ end }}
-  </div>
-
   <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
     <div class="post">
       <h1 class="post-single-header-title">{{ .Title }}</h1>
@@ -43,21 +24,8 @@
     </div>
   </div>
 
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 showMobile">    
-    {{ $related2 := .Site.RegularPages.Related . | first 3 }}
-    {{ with $related2 }}
-    <div class="sidebar-widget">
-      <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
-      {{ range . }}
-      <div class="related-post clearfix">
-        <a href="{{ .Permalink }}">
-          <h3 class="post-header-title">{{ .Title }}</h3>
-          <img class="related-post-image" src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
-        </a>
-      </div>
-      {{ end }}
-    </div>
-    {{ end }}
+  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">    
+    {{ partial "blog-single-sidebar.html" . }}
   </div>
 </div>
 {{ end }}
