--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -12,11 +12,11 @@
   </div>
   {{ end }}
 
-  <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
+  <div class="col-xs-12 col-sm-12">
     {{ partial "blog-sidebar.html" . }}
   </div>
 
-  <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
+  <div class="col-xs-12 col-sm-12">
     <div class="row">
       {{- $pages := .Pages -}}
       {{- if .IsHome -}}
@@ -24,14 +24,14 @@
       {{- end -}}
       {{- $paginator := .Paginate $pages -}}
       
-      {{ range first 1 $paginator.Pages -}}
-      <div class="col-xs-12 col-sm-12 col-md-12 first-entry">
+      {{ range first 2 $paginator.Pages -}}
+      <div class="col-xs-12 col-sm-12 col-md-6 first-entry">
         {{ partial "blogpost-listitem.html" . }}
       </div>
       {{ end }}
 
-      {{ range (after 1 $paginator.Pages) -}}
-      <div class="col-xs-12 col-sm-12 col-md-6">
+      {{ range (after 2 $paginator.Pages) -}}
+      <div class="col-xs-12 col-sm-12 col-md-4">
         {{ partial "blogpost-listitem.html" . }}
       </div>
       {{ end }}
