--- a/themes/customized/layouts/shortcodes/yt.html
+++ b/themes/customized/layouts/shortcodes/yt.html
@@ -1,5 +1,6 @@
 <iframe src="https://www.youtube.com/embed/{{ index .Params 0 }}?start={{ index .Params 1 }}"
         style="width: 100%; height: 500px;"
+        allow="encrypted-media;"
         allowfullscreen frameborder="0"
         title="YouTube Video">
 </iframe>
