Add the youtube src if allowed by cookies

--- a/themes/customized/layouts/shortcodes/yt.html
+++ b/themes/customized/layouts/shortcodes/yt.html
@@ -1,7 +1,8 @@
-<iframe src="https://www.youtube.com/embed/{{ index .Params 0 }}?start={{ index .Params 1 }}"
+<iframe data-src="https://www.youtube.com/embed/{{ index .Params 0 }}?start={{ index .Params 1 }}"
         style="width: 100%;"
         allow="encrypted-media;"
         allowfullscreen frameborder="0"
         title="YouTube Video"
         class="youtube">
 </iframe>
+
