--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -64,6 +64,7 @@
 
     function enableYoutube() {
         var youtube = $("iframe.youtube");
+        $(".youtube-disclaimer").hide();
         youtube.show();
         youtube.attr({
             src: youtube.attr('data-src')
