Renamed blog sidebar to blog filter

--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -13,7 +13,7 @@
   {{ end }}
 
   <div class="col-xs-12 col-sm-12">
-    {{ partial "blog-sidebar.html" . }}
+    {{ partial "blog-filter.html" . }}
   </div>
 
   <div class="col-xs-12 col-sm-12">
