Bundle and minify the css files

--- a/themes/customized/layouts/partials/head.html
+++ b/themes/customized/layouts/partials/head.html
@@ -32,12 +32,18 @@
 <link rel="icon" href="{{ . | absURL }}" />
 {{- end }}
 
-{{ range .Site.Params.basicCSS }}
-<link rel="stylesheet" href="{{ "css/" | absURL }}{{ . }}">
-{{ end }}
 
-{{ $style := resources.Get "sass/custom.scss" | toCSS }}
-<link rel="stylesheet" href="{{ $style.RelPermalink }}">
+<!-- Start CSS files -->
+{{ $bootstrap := resources.Get "css/bootstrap.4.1.3.min.css" }}
+{{ $fontawesome := resources.Get "css/fontawesome.5.13.0.css" }}
+{{ $cookieconsent := resources.Get "css/cookieconsent.min.css" }}
+{{ $custom := resources.Get "sass/custom.scss" | toCSS }}
+
+{{ $style := slice $bootstrap $fontawesome $cookieconsent $custom | resources.Concat "bundle.css" | minify | fingerprint }}
+
+<link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+<!-- End CSS files -->
+
 
 {{ with .OutputFormats.Get "RSS" }}
 <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
