Updated the home spacing

--- a/themes/customized/assets/sass/home.scss
+++ b/themes/customized/assets/sass/home.scss
@@ -11,7 +11,7 @@
     }
 
     .home-content {
-        margin-bottom: $spacing-xl;
+        margin-bottom: $spacing-xxl;
         column-count: 2;
     }
 }
