--- a/themes/customized/assets/sass/variables.scss
+++ b/themes/customized/assets/sass/variables.scss
@@ -40,6 +40,7 @@ $spacing-s: 8px;
 $spacing-m: 16px;
 $spacing-l: 24px;
 $spacing-xl: 32px;
+$spacing-xxl: 64px;
 
 /* border radius */
 $border-radius-s: 4px;
