--- a/themes/customized/assets/sass/home.scss
+++ b/themes/customized/assets/sass/home.scss
@@ -42,8 +42,20 @@ main {
     }
 }
 
+@media(min-width: 768px) and (max-width: 1199px) {
+    .home-blog-listitem:last-of-type {
+        display: none;
+    }
+}
+
 @media(min-width: 992px) {
     #header-container .home-content {
         column-count: 2;
+    }
+}
+
+@media(min-width: 1200px) {
+    .home-blog-listitem:last-of-type {
+        display: block;
     }
 }
