Fixed the home content layout

--- a/themes/customized/assets/sass/home.scss
+++ b/themes/customized/assets/sass/home.scss
@@ -12,6 +12,10 @@
 
     .home-content {
         margin-bottom: $spacing-xxl;
+
+        .welcome-content {
+            margin-bottom: $spacing-s;
+        }
     }
 }
 
