--- a/themes/customized/layouts/index.html
+++ b/themes/customized/layouts/index.html
@@ -9,7 +9,7 @@
           <h1 class="home-title">{{ .title | markdownify }}</h1>
           <img class="home-img" src="{{ .image | absURL }}" alt="post-image" title="post-image">
           <div class="row home-content">
-            <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-6 welcome-content">
               {{ .welcomeContent | markdownify }}
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6">
