--- a/themes/customized/layouts/partials/responsive-image.html
+++ b/themes/customized/layouts/partials/responsive-image.html
@@ -1,3 +1,5 @@
+<!-- https://discourse.gohugo.io/t/easy-way-to-serve-responsive-images-with-hugo/16184 -->
+<!-- image config.toml data -->
 {{ $image := .image }}
 
 <!-- variables used for img tag -->
