--- a/themes/customized/layouts/shortcodes/img.html
+++ b/themes/customized/layouts/shortcodes/img.html
@@ -1,3 +1,6 @@
+<!-- https://laurakalbag.com/processing-responsive-images-with-hugo/ -->
+<!-- https://dev.to/stereobooster/responsive-images-for-hugo-dn9 -->
+<!-- img tag in de/instagram -->
 {{/* get file that matches the filename as specified as src="" in shortcode */}}
 {{ $src := .Page.Resources.GetMatch (printf "*%s*" (.Get "src")) }}
 
