Added the latest three posts except the own one if there are no related posts

--- a/themes/customized/layouts/partials/blog-single-sidebar.html
+++ b/themes/customized/layouts/partials/blog-single-sidebar.html
@@ -1,14 +1,26 @@
 {{ $related := .Site.RegularPages.Related . | first 3 }}
-{{ with $related }}
-<div class="sidebar-widget">
-  <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
-  {{ range . }}
-  <div class="related-post clearfix">
-    <a href="{{ .Permalink }}">
-      <h3 class="post-header-title">{{ .Title }}</h3>
-      <img class="related-post-image" src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
-    </a>
+{{ if $related }}
+  <div class="sidebar-widget">
+    <h2 class="widget-title">{{ i18n "related_posts" }}</h2>
+    {{ range $related }}
+    <div class="related-post clearfix">
+      <a href="{{ .Permalink }}">
+        <h3 class="post-header-title">{{ .Title }}</h3>
+        <img class="related-post-image" src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
+      </a>
+    </div>
+    {{ end }}
   </div>
-  {{ end }}
-</div>
+{{ else }}
+  <div class="sidebar-widget">
+    <h2 class="widget-title">{{ i18n "latest_posts" }}</h2>
+    {{ range first 3 (where (where .Site.RegularPages "Type" "blog") "Title" "!=" .Title ) }}
+    <div class="related-post clearfix">
+      <a href="{{ .Permalink }}">
+        <h3 class="post-header-title">{{ .Title }}</h3>
+        <img class="related-post-image" src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
+      </a>
+    </div>
+    {{ end }}
+  </div>
 {{ end }}
