Retrieve the blog images from the resources

--- a/themes/customized/layouts/blog/single.html
+++ b/themes/customized/layouts/blog/single.html
@@ -4,11 +4,13 @@
     <div class="post">
       <h1 class="post-single-header-title">{{ .Title }}</h1>
       {{ partial "blogpost-header.html" . }}
-       
-      {{ with .Params.featured_image -}}
-      <div class="post-thumb">
-        <img src="{{ . | absURL }}" alt="post-image" title="post-image">
-      </div>
+
+      {{ with .Resources.ByType "image" }}
+        {{ range . }}
+          <div class="post-thumb">
+            <img src="{{ .RelPermalink }}" alt="post-image" title="post-image">
+          </div>
+        {{ end }}
       {{ end }}
 
       <div class="post-content">
