--- a/themes/customized/layouts/instagram/list.html
+++ b/themes/customized/layouts/instagram/list.html
@@ -9,7 +9,11 @@
     <div>
       <a href="{{ .Permalink }}">
         <h2>{{ .Title }}</h2>
-        <img src="{{ .Params.featured_image | relURL }}" alt="{{ .Title }}">
+        {{ with .Resources.ByType "image" }}
+          {{ range . }}
+            <img src="{{ .RelPermalink }}" alt="{{ .Title }}">
+          {{ end }}
+        {{ end }}
       </a>
     </div>
     {{ end }}
