--- a/themes/customized/layouts/partials/scripts.html
+++ b/themes/customized/layouts/partials/scripts.html
@@ -2,13 +2,13 @@
 {{ $jQuery := resources.Get "js/jquery-3.3.1.slim.min.js" }}
 {{ $popper := resources.Get "js/popper.min.js" }}
 {{ $bootstrap := resources.Get "js/bootstrap.4.1.3.min.js" }}
-{{ $cookieconsent := resources.Get "js/cookieconsent.min.js" }}
+{{ $lazysizes := resources.Get "js/lazysizes.min.js" }}
 
 <!-- Custom JS -->
 {{ $custom := resources.Get "js/custom.js" }}
 
 <!-- Bundling with custom JS -->
-{{ $jsCombined := slice $jQuery $popper $bootstrap $custom | resources.Concat "js/bundle.js" }}
+{{ $jsCombined := slice $jQuery $popper $bootstrap $lazysizes $custom | resources.Concat "js/bundle.js" }}
 
 <!-- Minification -->
 {{ $js := $jsCombined | resources.Minify }}
