--- a/themes/customized/layouts/partials/responsive-image.html
+++ b/themes/customized/layouts/partials/responsive-image.html
@@ -1,25 +1,51 @@
-<!-- https://discourse.gohugo.io/t/easy-way-to-serve-responsive-images-with-hugo/16184 -->
-<!-- image config.toml data -->
-{{ $image := .image }}
+{{ with .Resources.ByType "image" }}
+  {{ range . }}
 
-<!-- variables used for img tag -->
-{{ $imgSrc := "" }}
-{{ $imgSrcSet := slice }}
+    {{ $src := . }}
 
-<!-- uses settings from config.toml depending on orientation -->
-{{ $widths := $.Site.Params.landscapePhotoWidths }}
-{{ if gt $image.Height $image.Width }}
-  {{ $widths = $.Site.Params.portraitPhotoWidths }}
+    {{/* set image sizes, these are hardcoded for now, x dictates that images are resized to this width */}}
+    {{ $lqipw := default "20x" }}
+    {{ $tinyw := default "200x" }}
+    {{ $smallw := default "300x" }}
+    {{ $mediumw := default "500x" }}
+    {{ $largew := default "800x" }}
+    {{ $xlargew := default "1000x" }}
+
+    {{/* resize the src image to the given sizes */}}
+    {{ $lqip := $src.Resize $lqipw }}
+    {{ $tiny := $src.Resize $tinyw }}
+    {{ $small := $src.Resize $smallw }}
+    {{ $medium := $src.Resize $mediumw }}
+    {{ $large := $src.Resize $largew }}
+    {{ $xlarge := $src.Resize $xlargew }}
+
+    {{/* only use images smaller than or equal to the src (original) image size, as Hugo will upscale small images */}}
+    {{/* set the sizes attribute to (min-width: 35em) 1200px, 100vw unless overridden in shortcode */}}
+
+    <div class="post-thumb">
+      <img
+        class="lazyload"
+        data-sizes="auto"
+        data-srcset='
+        {{ if ge $src.Width "200" }}
+          {{ with $tiny.RelPermalink }}{{.}} 200w{{ end }}
+        {{ end }}
+        {{ if ge $src.Width "300" }}
+          {{ with $small.RelPermalink }}, {{.}} 300w{{ end }}
+        {{ end }}
+        {{ if ge $src.Width "500" }}
+          {{ with $medium.RelPermalink }}, {{.}} 500w{{ end }}
+        {{ end }}
+        {{ if ge $src.Width "800" }}
+          {{ with $large.RelPermalink }}, {{.}} 800w {{ end }}
+        {{ end }}
+        {{ if ge $src.Width "1000" }}
+          {{ with $large.RelPermalink }}, {{.}} 1000w {{ end }}
+        {{ end }}'
+        {{ with .Title }}
+          alt='{{.}}'
+          title='{{.}}'
+        {{ end }}>
+    </div>
+  {{ end }}
 {{ end }}
-
-<!--
-  Add URL for each width to $imgSrcSet variable
-  format: "/path/img_1000.jpg 1000w,/path/img_500.jpg 500w"
-  Note: the first URL is used as "fallback" src in $imgSrc.
--->
-{{ range $widths }}
-  {{ $srcUrl := (printf "%dx" . | $image.Resize).RelPermalink }}
-  {{ if eq $imgSrc "" }}{{ $imgSrc = $srcUrl }}{{ end }}
-  {{ $imgSrcSet = $imgSrcSet | append (printf "%s %dw" $srcUrl .) }}
-{{ end }}
-{{ $imgSrcSet = (delimit $imgSrcSet ",") }}
