--- a/themes/customized/layouts/partials/blogpost-listitem.html
+++ b/themes/customized/layouts/partials/blogpost-listitem.html
@@ -1,12 +1,6 @@
 <div class="post">
   <a href="{{ .Permalink }}" title="">
-    {{ with .Resources.ByType "image" }}
-      {{ range . }}
-        <div class="post-image">
-          <img src="{{ .RelPermalink }}" alt="post-image" title="post-image">
-        </div>
-      {{ end }}
-    {{ end }}
+    {{ partial "responsive-image.html" . }}
   </a>
 
   <p class="post-header-title"><a href="{{ .Permalink }}" title="">{{ .Title }}</a></p>
