--- a/themes/customized/layouts/partials/responsive-image.html
+++ b/themes/customized/layouts/partials/responsive-image.html
@@ -4,43 +4,40 @@
     {{ $src := . }}
 
     {{/* set image sizes, these are hardcoded for now, x dictates that images are resized to this width */}}
+
     {{ $lqipw := default "20x" }}
-    {{ $tinyw := default "200x" }}
-    {{ $smallw := default "300x" }}
-    {{ $mediumw := default "500x" }}
-    {{ $largew := default "800x" }}
-    {{ $xlargew := default "1000x" }}
+    {{ $tinyw := default "500x" }}
+    {{ $smallw := default "800x" }}
+    {{ $mediumw := default "1200x" }}
+    {{ $largew := default "1500x" }}
 
     {{/* resize the src image to the given sizes */}}
+
     {{ $lqip := $src.Resize $lqipw }}
     {{ $tiny := $src.Resize $tinyw }}
     {{ $small := $src.Resize $smallw }}
     {{ $medium := $src.Resize $mediumw }}
     {{ $large := $src.Resize $largew }}
-    {{ $xlarge := $src.Resize $xlargew }}
 
     {{/* only use images smaller than or equal to the src (original) image size, as Hugo will upscale small images */}}
     {{/* set the sizes attribute to (min-width: 35em) 1200px, 100vw unless overridden in shortcode */}}
 
-    <div class="post-thumb">
+    <div class="post-thumb" style="background: url(data:image/jpeg;base64,{{ $lqip.Content | base64Encode  }}); background-size: cover; border-radius: 12px">
       <img
         class="lazyload"
         data-sizes="auto"
         data-srcset='
-        {{ if ge $src.Width "200" }}
-          {{ with $tiny.RelPermalink }}{{.}} 200w{{ end }}
-        {{ end }}
-        {{ if ge $src.Width "300" }}
-          {{ with $small.RelPermalink }}, {{.}} 300w{{ end }}
-        {{ end }}
         {{ if ge $src.Width "500" }}
-          {{ with $medium.RelPermalink }}, {{.}} 500w{{ end }}
+        {{ with $tiny.RelPermalink }}{{.}} 500w{{ end }}
         {{ end }}
         {{ if ge $src.Width "800" }}
-          {{ with $large.RelPermalink }}, {{.}} 800w {{ end }}
+          {{ with $small.RelPermalink }}, {{.}} 800w{{ end }}
         {{ end }}
-        {{ if ge $src.Width "1000" }}
-          {{ with $xlarge.RelPermalink }}, {{.}} 1000w {{ end }}
+        {{ if ge $src.Width "1200" }}
+          {{ with $medium.RelPermalink }}, {{.}} 1200w{{ end }}
+        {{ end }}
+        {{ if ge $src.Width "1500" }}
+          {{ with $large.RelPermalink }}, {{.}} 1500w {{ end }}
         {{ end }}'
         data-src="{{ $src.RelPermalink }}"
         {{ with .Title }}
@@ -51,20 +48,17 @@
         <img
           loading="lazy"
           srcset='
-          {{ if ge $src.Width "200" }}
-            {{ with $tiny.RelPermalink }}{{.}} 200w{{ end }}
-          {{ end }}
-          {{ if ge $src.Width "300" }}
-            {{ with $small.RelPermalink }}, {{.}} 300w{{ end }}
-          {{ end }}
           {{ if ge $src.Width "500" }}
-            {{ with $medium.RelPermalink }}, {{.}} 500w{{ end }}
+            {{ with $tiny.RelPermalink }}{{.}} 500w{{ end }}
           {{ end }}
           {{ if ge $src.Width "800" }}
-            {{ with $large.RelPermalink }}, {{.}} 800w {{ end }}
+            {{ with $small.RelPermalink }}, {{.}} 800w{{ end }}
           {{ end }}
-          {{ if ge $src.Width "1000" }}
-            {{ with $xlarge.RelPermalink }}, {{.}} 1000w {{ end }}
+          {{ if ge $src.Width "1200" }}
+            {{ with $medium.RelPermalink }}, {{.}} 1200w{{ end }}
+          {{ end }}
+          {{ if ge $src.Width "1500" }}
+            {{ with $large.RelPermalink }}, {{.}} 1500w {{ end }}
           {{ end }}'
           src="{{ $src.RelPermalink }}"
           {{ with .Title }}
