--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -100,7 +100,7 @@ li:hover a, li:active a, a:hover, a:active {
 }
 
 main .blog-disclaimer,
-.youtube-disclaimer {
+.social-media-disclaimer {
     border: $border-radius-s solid $color-secondary;
     border-radius: $border-radius-s;
     padding: $spacing-m;
@@ -108,12 +108,11 @@ main .blog-disclaimer,
     text-align: center;
 }
 
-.youtube-disclaimer {
+.social-media-disclaimer {
     padding-bottom: $spacing-l;
     
     .fa-youtube {
         font-size: $font-size-display;
-
     }
 
     .text-content {
@@ -122,7 +121,7 @@ main .blog-disclaimer,
         text-align: initial;
     }
 
-    #youtubeOptIn {
+    #socialMediaOptIn {
         color: $color-grey-100;
 
         &:hover {
