Renamed disclaimer youtube link to disclaimer social media link

--- a/themes/customized/layouts/shortcodes/yt.html
+++ b/themes/customized/layouts/shortcodes/yt.html
@@ -9,5 +9,5 @@
 <div class="social-media-disclaimer">
         <div><i class="fab fa-youtube"></i></div>
         <div class="text-content">{{ i18n "disclaimer_youtube" }}</div>
-        <a id="socialMediaOptIn" class="button" href="javascript:openCookieBanner()">{{ i18n "disclaimer_youtube_link" }}</a>
+        <a id="socialMediaOptIn" class="button" href="javascript:openCookieBanner()">{{ i18n "disclaimer_social_media_link" }}</a>
 </div>
