Enable social media plugins if cookies are accepted

--- a/themes/customized/assets/sass/home.scss
+++ b/themes/customized/assets/sass/home.scss
@@ -38,6 +38,7 @@ main {
 
         .social-media-item {
             margin-bottom: $spacing-m;
+            display: none;
 
             .instagram-item {
                 height: 500px;
