--- a/themes/customized/layouts/partials/cookies.html
+++ b/themes/customized/layouts/partials/cookies.html
@@ -31,7 +31,7 @@
         var type = this.options.type
         if (type === 'opt-in' && status === 'allow') {
             activateTemplate('#cookieConsent');
-            enableYoutube();
+            enableSocialMedia();
         } else {
             disableGoogleAnalytics();
         }
@@ -41,7 +41,7 @@
         var type = this.options.type;
         if (type === 'opt-in' && status === 'allow') {
             activateTemplate('#cookieConsent');
-            enableYoutube();
+            enableSocialMedia();
         } else {
             disableGoogleAnalytics();
         } 
@@ -62,10 +62,12 @@
         }
     }
 
-    function enableYoutube() {
+    function enableSocialMedia() {
         var youtube = $("iframe.youtube");
+        var socialMediaItem = $(".social-media-item");
         $(".social-media-disclaimer").hide();
         youtube.show();
+        socialMediaItem.show();
         youtube.attr({
             src: youtube.attr('data-src')
 
